--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Cyotek.Drawing.BitmapFont" version="2.0.0" targetFramework="net472" />
+  <package id="HelixToolkit" version="2.25.0" targetFramework="net472" />
   <package id="HelixToolkit.Wpf" version="2.25.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="SharpGLTF.Core" version="1.0.2" targetFramework="net472" />
+  <package id="SharpGLTF.Runtime" version="1.0.2" targetFramework="net472" />
+  <package id="SharpGLTF.Toolkit" version="1.0.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
